# MeatyCoven

./: .gitignore  CHAT-QUICKSTART.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  deny.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: branch-triage.yml  ci.yml  dependabot-auto-merge.yml  engine-bump.yml  release-npm.yml
brand/docs/: BRAND-USAGE.md
brand/ui/: typography.css
crates/coven-cli/: Cargo.toml
crates/coven-cli/src/: api.rs  chat.rs  cockpit_sources.rs  control_plane.rs  daemon.rs  engine.rs  engine_install.rs  eval_loop.rs  executor_node.rs  familiar_identity.rs  harness.rs  hub.rs  main.rs  observe.rs  openclaw_repo.rs  parallel_protocol.rs  patch.rs  paths.rs  privacy.rs  project.rs  prompt_refs.rs  proposal_scheduler.rs  pty_runner.rs  repos_config.rs  settings.rs  store.rs  stream_json.rs  threads_gate.rs  ward.rs
crates/coven-cli/src/pc/: diagnostics.rs  display.rs  mod.rs  relief.rs
crates/coven-cli/src/tui/: sessions.rs  shell.rs
crates/coven-cli/src/tui/cast/: attach.rs  follow.rs  intent.rs  mod.rs  plan.rs  render.rs
crates/coven-cli/src/tui/chat/: app.rs  client.rs  mod.rs  persistence.rs  render.rs
crates/coven-cli/tests/: executor_protocol.rs  smoke.rs  stream_json_integration.rs
crates/coven-cli/tests/fixtures/: windows_detached_pty_stub.rs
crates/coven-memory/: Cargo.toml
crates/coven-memory/src/: db.rs  embed.rs  index.rs  ingest.rs  lib.rs  main.rs
crates/coven-relay/: Cargo.toml  README.md
crates/coven-relay/deploy/: Dockerfile  fly.toml
crates/coven-relay/src/: main.rs  ws.rs
docs/: .scaffold.sh  AGENTS.md  API-CONTRACT.md  API.md  ARCHITECTURE.md  AUTH.md  BRAND.md  BRANDING-ADHERENCE.md  CLIENT-INTEGRATION.md  COMUX-DEMO-LOOP.md  CONCEPTS.md  DOCS-MAINTENANCE.md  ENGINE-CONTRACT.md  FUTURE-HARNESSES.md  GETTING-STARTED.md  GLOSSARY.md  HARNESS-ADAPTERS.md  HUB-OPERATIONS.md  MERGE-GUIDE.md  MVP-PLAN.md  OPERATIONAL-MODEL.md  ORCHESTRATION-QUICK-REFERENCE.md  ORCHESTRATION-WORKFLOWS.md  PRODUCT-SPEC.md  PROMPT-REFERENCES.md  README.md  ROADMAP.md  SAFETY-MODEL.md  SESSION-LIFECYCLE.md  SETTINGS.md  STREAM-JSON.md  TROUBLESHOOTING.md  USER-GUIDE-ORCHESTRATION.md  chat-persistence.md  docs.json  index.md  package-lock.json  package.json  release-notes-unified-cli.md  sidebar-nav.js  (+1 more)
docs/announcements/: comux-demo-loop.md
docs/automation/: cron.md  hooks.md  index.md  standing-orders.md
docs/capabilities/: action-routing.md  discovery.md  index.md
docs/concepts/: architecture.md  authority-boundary.md  control-plane.md  features.md  runtime-topology.md  store.md
docs/daemon/: api-versioning.md  auth-posture.md  capabilities-handshake.md  configuration.md  coven-home.md  diagnostics.md  error-envelope.md  health.md  index.md  lifecycle.md  logs.md  orphan-recovery.md  remote-access.md  safety-model.md  socket-api.md  trust-boundary.md  upgrades.md
docs/design/: ward-gate3-coherence.md
docs/es/: API-CONTRACT.md  ARCHITECTURE.md  AUTH.md  CLIENT-INTEGRATION.md  COMUX-DEMO-LOOP.md  CONCEPTS.md  FUTURE-HARNESSES.md  GETTING-STARTED.md  GLOSSARY.md  PRODUCT-SPEC.md  ROADMAP.md  SAFETY-MODEL.md  SESSION-LIFECYCLE.md  index.md
docs/familiars/: handoff.md  identity.md  index.md  multi-familiar.md  naming-and-voice.md  orchestration.md  parallel-lanes.md  personas.md  roles.md  what-is-a-familiar.md
docs/harnesses/: aider.md  claude-code.md  cline.md  codex.md  copilot-cli.md  custom.md  gemini-cli.md  grok-build.md  hermes.md  index.md  installing.md  openclaw.md  project-root.md  provider-auth.md  title-and-metadata.md  troubleshooting.md  what-is-a-harness.md  working-directory.md
docs/help/: community.md  daemon-wont-start.md  diagnostics-bundle.md  environment.md  filing-issues.md  harness-not-found.md  index.md  paths.md  permissions.md  session-stuck.md  troubleshooting.md
docs/install/: cargo.md  coven-home.md  development-channels.md  docker.md  from-source.md  headless-server.md  index.md  launchd.md  linux.md  macos.md  nix.md  npm.md  podman.md  raspberry-pi.md  systemd.md  uninstall.md  updating.md  windows.md  wsl2.md
docs/memory/: episodic.md  index.md  persistent-memory.md  search.md  semantic.md  working-memory.md
docs/models/: anthropic.md  google.md  index.md  local-models.md  openai.md  provider-boundary.md  why-coven-does-not-own-credentials.md
docs/plugins/: building-plugins.md  index.md  manage.md  openclaw-bridge.md
docs/reference/: adapter-spec.md  api-actions.md  api-capabilities.md  api-contract.md  api-events.md  api-sessions.md  api.md  brand.md  changelog.md  cli-archive.md  cli-attach.md  cli-coven.md  cli-daemon.md  cli-doctor.md  cli-observe.md  cli-patch.md  cli-run.md  cli-sacrifice.md  cli-sessions.md  cli-summon.md  cli-ward.md  cli.md  credits.md  future-harnesses.md  glossary.md  harness-adapters.md  license.md  release-notes.md  releasing.md  roadmap.md
docs/rituals/: archive.md  index.md  sacrifice.md  summon.md
docs/ru/: API-CONTRACT.md  ARCHITECTURE.md  AUTH.md  CLIENT-INTEGRATION.md  COMUX-DEMO-LOOP.md  CONCEPTS.md  FUTURE-HARNESSES.md  GETTING-STARTED.md  GLOSSARY.md  PRODUCT-SPEC.md  ROADMAP.md  SAFETY-MODEL.md  SESSION-LIFECYCLE.md  index.md
docs/sessions/: compaction.md  comux-json.md  events.md  index.md  lifecycle.md
docs/start/: automation.md  coven-tui.md  doctor.md  first-session.md  getting-started.md  onboarding.md  openclaw-rescue.md  quickstart.md  showcase.md  tinkerers-next-30-minutes.md
docs/tools/: apply-patch.md  creating-skills.md  desktop-automation.md  exec.md  index.md  skills.md  slash-commands.md  thinking.md  web-fetch.md
npm/coven/: README.md  (+1 more)
scripts/: check-secrets-test.py  check-secrets.py  onboarding-docs-test.mjs  pin-engine.sh  publish-npm-test.mjs  publish-npm.mjs  test-cli-prepublish.mjs
skills/: README.md
web/: brand.css  index.html
(+53 files in other folders)
