[package]
name = "coven-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "coven"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
json5 = "0.4"
portable-pty = "0.9"
regex = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
toml_edit = { version = "0.22", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.39"
dirs-next = "2"
chacha20poly1305 = { version = "0.10", features = ["std", "rand_core"] }
globset = "0.4"
# Chat TUI
ratatui = { version = "0.30", default-features = false, features = ["crossterm", "underline-color"] }
unicode-width = "0.2"
textwrap = "0.16"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
