[package]
name = "coven-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "coven"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
json5 = "1.3"
portable-pty = "0.9"
regex = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
toml_edit = { version = "0.25", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.39"
dirs-next = "2"
chacha20poly1305 = { version = "0.10", features = ["std", "rand_core"] }
globset = "0.4"
# Chat TUI
ratatui = { version = "0.30", default-features = false, features = ["crossterm", "underline-color"] }
unicode-width = "0.2"
textwrap = "0.16"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
interprocess = "2"
windows-sys = { version = "0.59", features = ["Win32_Security", "Win32_Security_Authorization", "Win32_Foundation", "Win32_System_Memory"] }

[dev-dependencies]
tempfile = "3"
