[package]
name = "coven-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "coven"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
# Runtime capability model shared with the coven-runtimes registry. Pinned to a
# release tag; the daemon reads a manifest's declared capabilities through
# these types instead of hardcoded harness-id checks (integration.md, PR 1).
coven-runtime-spec = { git = "https://github.com/OpenCoven/coven-runtimes", tag = "v0.1.3", version = "0.1.3" }
# The authority-boundary gate layer for familiar protected surfaces
# (PHASE-0-DESIGN.md in OpenCoven/coven-threads; RFC-0001 §5). The daemon is
# the only caller: familiar-controlled processes never reach this crate.
# Pinned to the reviewed Phase 5 core revision until its 0.2 release tag lands.
coven-threads-core = { git = "https://github.com/OpenCoven/coven-threads", rev = "7da030d", version = "0.2.0" }
blake3 = "1"
time = { version = "0.3", features = ["formatting"] }
crossterm = "0.29"
flate2 = "1"
json5 = "1.3"
portable-pty = "0.9"
regex = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
toml = "1.1"
toml_edit = { version = "0.25", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5"] }
sysinfo = "0.39"
dirs-next = "2"
chacha20poly1305 = { version = "0.10", features = ["std", "rand_core"] }
globset = "0.4"
# Chat TUI
ratatui = { version = "0.30", default-features = false, features = ["crossterm", "underline-color"] }
unicode-width = "0.2"
textwrap = "0.16"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
interprocess = "2"
widestring = "1"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Console", "Win32_System_Threading", "Win32_System_JobObjects", "Win32_System_SystemInformation"] }

[dev-dependencies]
tempfile = "3"
