[package]
name = "coven-memory"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Archival memory layer for Coven familiars — TurboVec vector index + local embeddings"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2"
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-native-tls", "hf-hub-native-tls"] }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
turbovec = "0.8"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "coven-memory"
path = "src/main.rs"
