[package]
name = "coven-relay"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Stateless WebSocket relay for Hexes — bridges Coven gateway to iOS clients"

[[bin]]
name = "coven-relay"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
